--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <body>
    <h1>Bem vindos ao meu site</h1>
    <p>Testando o Github</p>
-   <img href="jmn02.jpg">
+   <img src="jmn02.jpg">
   </body>
  </html>
+ 
